--- a/packages/harmony/src/components/button/Button.module.css
+++ b/packages/harmony/src/components/button/Button.module.css
@@ -100,6 +100,8 @@
   --text-color: var(--harmony-static-white);
   --button-color: var(--harmony-primary);
   background: var(--button-color);
+  border: none;
+  margin: 0 1px;
 }
 .primary:hover {
   --overlay-color: var(--harmony-static-white);
@@ -114,7 +116,7 @@
 
 /* Secondary */
 .secondary {
-  --button-color: var(--harmony-n-300);
+  --button-color: var(--harmony-border-strong);
   --text-color: var(--harmony-text-default);
   background: transparent;
   box-shadow: none;
@@ -126,6 +128,8 @@
   --overlay-color: var(--harmony-static-white);
   --overlay-opacity: 0.1;
   box-shadow: var(--harmony-shadow-mid);
+  border: none;
+  margin: 0 1px;
 }
 .secondary:active {
   --button-color: var(--harmony-primary);
@@ -134,20 +138,30 @@
   --overlay-color: var(--harmony-static-black);
   --overlay-opacity: 0.2;
   box-shadow: none;
+  border: none;
+  margin: 0 1px;
 }
 
 /* Tertiary */
 .tertiary {
-  --button-color: var(--harmony-n-300);
+  --button-color: var(--harmony-border-default);
   --text-color: var(--harmony-text-default);
-  background: var(--harmony-static-white);
+  /* Don't use opacity prop as it affects the text too */
+  background-color: rgb(255, 255, 255, .85);
+  backdrop-filter: blur(6px);
 }
 .tertiary:hover {
+  --button-color: var(--harmony-border-strong);
   box-shadow: var(--harmony-shadow-mid);
+  opacity: 1;
+  backdrop-filter: none;
 }
 .tertiary:active {
+  --button-color: var(--harmony-border-strong);
   background-color: var(--harmony-n-50);
   box-shadow: none;
+  opacity: 1;
+  backdrop-filter: none;
 }
 
 /* Destructive */
@@ -160,14 +174,13 @@
 .destructive:hover {
   --button-color: var(--harmony-red);
   --text-color: var(--harmony-static-white);
-  --overlay-color: var(--harmony-static-white);
-  --overlay-opacity: 0.1;
   background-color: var(--button-color);
   box-shadow: var(--harmony-shadow-mid);
 }
 .destructive:active {
   --button-color: var(--harmony-red);
-  --text-color: var(--harmony-static-white);  --overlay-color: var(--harmony-static-black);
+  --text-color: var(--harmony-static-white);
+  --overlay-color: var(--harmony-static-black);
   --overlay-opacity: 0.2;
   background-color: var(--button-color);
   box-shadow: none;
@@ -178,16 +191,16 @@
   box-shadow: none;
 }
 
-.primary.disabled,
-.secondary.disabled {
+.primary.disabled {
   --button-color: var(--harmony-n-150);
   --text-color: var(--harmony-static-white);
   background-color: var(--harmony-n-150);
   border-color: var(--harmony-n-150);
 }
 
-.destructive.disabled,
-.tertiary.disabled {
+.secondary.disabled,
+.tertiary.disabled,
+.destructive.disabled {
   opacity: 0.45;
 }
 
@@ -200,4 +213,34 @@
   border-radius: 0;
   padding: 0;
   height: 100%;
+}
+
+/* Dark mode */
+html[data-theme='dark'] {
+  .primary:hover {
+    --overlay-opacity: 0.2;
+  }
+  .primary.disabled {
+    --button-color: var(--harmony-n-150);
+    --text-color: var(--harmony-white);
+  }
+
+  .secondary:hover {
+    --overlay-opacity: 0.2;
+  }
+
+  .tertiary {
+    --button-color: var(--harmony-bg-white);
+    --text-color: var(--harmony-text-default);
+    /* Don't use opacity prop as it affects the text too */
+    background-color: rgba(50, 51, 77, 0.6);
+  }
+  .tertiary:hover {
+    --button-color: var(--harmony-bg-white);
+    opacity: 1;
+  }
+  .tertiary:active {
+    --button-color: var(--harmony-n-50);
+    background-color: var(--button-color); 
+  }
 }
